  levenshtein automata.  (James Dyer, rmuir)
   
* SOLR-1873: SolrCloud - added shared/central config and core/shard managment via zookeeper,
  built-in load balancing, and infrastructure for future SolrCloud work. (yonik, Mark Miller)
  Additional Work:
  SOLR-2324: SolrCloud solr.xml parameters are not persisted by CoreContainer.
  (Massimo Schiavon, Mark Miller)

* SOLR-1729: Evaluation of NOW for date math is done only once per request for
  consistency, and is also propagated to shards in distributed search.
  Adding a parameter NOW=<time_in_ms> to the request will override the
  current time.  (Peter Sturge, yonik)

* SOLR-1566: Transforming documents in the ResponseWriters.  This will allow
  for more complex results in responses and open the door for function queries
  as results. 
  (ryan with patches from grant, noble, cmale, yonik, Jan Høydahl, 
  Arul Kalaipandian, hossman)

* SOLR-2396: Add CollationField, which is much more efficient than 
  the Solr 3.x CollationKeyFilterFactory, and also supports 
  Locale-sensitive range queries. (rmuir)

* SOLR-2338: Add support for using <similarity/> in a schema's fieldType,
  for customizing scoring on a per-field basis. (hossman, yonik, rmuir)
  
* SOLR-2335: New 'field("...")' function syntax for refering to complex 
  field names (containing whitespace or special characters) in functions.

* SOLR-1709: Distributed support for Date and Numeric Range Faceting
  (Peter Sturge, David Smiley, hossman)

* SOLR-2383: /browse improvements: generalize range and date facet display
  (Jan Høydahl via yonik)

* SOLR-2272: Pseudo-join queries / filters.  Examples:
  To restrict to the set of parents with at least one blue-eyed child:
    fq={!join from=parent to=name}eyes:blue
  To restrict to the set of children with at least one blue-eyed parent:
    fq={!join from=name to=parent}eyes:blue
  (yonik)

* SOLR-1942: Added the ability to select codec per fieldType in schema.xml